--- a/styles/main.css
+++ b/styles/main.css
@@ -45,6 +45,11 @@
     color: rgb(233,50,117);
 }
 
+.links-container .navbar-link:active {
+  color: rgb(233,50,117);
+  background-color: white;
+}
+
 html {
     height: 100%; /* makes sure our HTML takes up 100% of the browser window */
     font-size: 100%;
